fix alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .container {
-  /* width: -webkit-fill-available;
+  width: -webkit-fill-available;
   box-sizing: border-box;
   margin: 0 auto;
   display: flex;
@@ -7,7 +7,7 @@
   max-width: 1600px;
   text-align: center;
   align-self: center;
-  justify-content: center; */
+  justify-content: center;
 
 
 }
@@ -111,7 +111,7 @@
   border-top: solid 3px #B7410E;
   border-bottom: solid 3px #B7410E;
   background-color: #6B5238;
-  text-align: center;
+  text-align: right;
 
 }
 
@@ -150,7 +150,7 @@ h4 {
 
 .user-name {
   font-family: 'Lemon', cursive;
-  font-size: 2.5em;
+  font-size: 1.5em;
   background-color: #361002;
   color: #F4DB9D;
   border: solid 6px #B7410E;
@@ -165,13 +165,14 @@ input {
   display: flex;
   flex-direction: column;
   padding: 8px 2px;
+  width: 208px;
   height: 16px;
+  margin: 8px auto;
   border-color: #361002;
   outline: none;
   color: #B7410E;
   font-size: 16px;
   text-align: center;
-  align-self: center;
 }
 
 input:focus, input:hover {
@@ -205,7 +206,6 @@ form {
   border: solid 2px #361002;
   background-color: #6B5238;
   border-radius: 16px;
-  align-items: center;
  }
 
 label {
